Forgot to create another branch for this specific issue ( #27 )...added dots around titles for About and FAQ as well as updated images for faq-title-dots to a complete row of monsters (instead of having a cutoff at the end). Dots are reduced according when resizing the window. Might have to fix the size of the title tho.

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -296,6 +296,17 @@
     @apply px-[10%] md:px-[15%] lg:px-[25%];
   }
 
+  .about-section-title {
+    @apply justify-center;
+    display: flex;
+  }
+
+  .about-section-title > img {
+    @apply flex-none overflow-hidden;
+    margin-right: 40px;
+  }
+
+
   #about-title{
     @apply mx-auto w-[30%];
   }
@@ -439,13 +450,22 @@
     @apply relative top-[-100px] invisible;
   }
 
-  #faq-title{
-    @apply mx-auto py-8 w-[11%];
-  }
-
   .faq-section {
     @apply pt-12;
     margin-bottom: -0.5rem;
+  }
+
+  .faq-section-title {
+    @apply justify-center mb-5;
+    display: flex;
+  }
+
+  .faq-section-title > img {
+    @apply flex-none overflow-hidden;
+  }
+
+  #faq-title {
+    @apply mx-5 w-[15%];
   }
 
   .faq-content{
